# rubric-kit

./: .gitignore  README.md  RUBRICS.md  example.yaml  example_chat_session.txt  example_evaluations.json  main.py  panel.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: auto-release.yaml  ci.yaml  release.yaml
examples/: arena.example.yaml  dimensions.example.yaml  judge_panel.example.yaml  rubric.example.yaml
rubric_kit/: consensus.py  converters.py  execution.py  generator.py  llm_judge.py  main.py  output.py  parser.py  pdf_export.py  processor.py  prompts.py  schema.py  tool_evaluator.py  validator.py
tests/: __init__.py  test_arena.py  test_execution.py  test_generator.py  test_llm_judge.py  test_main.py  test_output.py  test_processor.py  test_prompts.py  test_schema.py  test_validator.py  test_variables.py
