[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rubric-kit"
version = "0.1.0"
description = "Generate high-quality Rubrics based on custom dimensions, descriptors, criteria and scoring system."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.5.0",
    "PyYAML>=6.0.1",
    "tabulate>=0.9.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
rubric-kit = "rubric_kit.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

